# automation-python-bot-defaulters-connections

./: README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
services/: graphql_client.py  junior_client.py
utils/: logger.py
