[tool.poetry]
name = "sample-poetry-configuration"
version = "0.1.0"
description = ""
authors = ["jeffemart <jefferson.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.24.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
